update workbook and model answers to agree

--- a/ex_D_workbook.ipynb
+++ b/ex_D_workbook.ipynb
@@ -49,7 +49,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "# Instruction: run this cell to see built in functions we have been using\n",
@@ -71,7 +73,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "# Instruction: run this cell to get help on the len() function\n",
@@ -166,7 +170,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "# Instruction: run this cell to show running the double function \n",
@@ -184,7 +190,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "help(double)"
@@ -202,7 +210,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "sequence = 'ATTGGGCCCC'\n",
@@ -253,7 +263,9 @@
     "* `A`\n",
     "* `AT`\n",
     "* `ATGC`\n",
-    "* `CTGCTATAAAAGGCTG`"
+    "* `CTGCTATAAAAGGCTG`\n",
+    "\n",
+    "You might want to use http://arep.med.harvard.edu/cgi-bin/adnan/revcomp.pl"
    ]
   },
   {
@@ -265,7 +277,29 @@
    "outputs": [],
    "source": [
     "# Instruction: use the complement function to check the sequences\n",
-    "# have their expect compliment"
+    "# have their expected complements"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Is the help message for the `complement` function reasonable?\n",
+    "Imagine you are a user of the function who cannot read the source code.\n",
+    "\n",
+    "Check the help message:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "# Instruction: run this cell to check help message for complement\n",
+    "help(complement)"
    ]
   },
   {
@@ -294,7 +328,7 @@
    },
    "outputs": [],
    "source": [
-    "# Instruction: test your reverse complement function"
+    "# Instruction: test your reverse_complement function"
    ]
   },
   {
@@ -323,6 +357,22 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "and test the rewritten:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "Now replace the `complement` function with an extension that deals with RNA base U that has the complement A."
    ]
   },
@@ -341,7 +391,10 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Show that the `complement` and `reverse_complement` function work as expected for RNA sequences "
+    "Show that the `complement` and `reverse_complement` function work as expected for the following case.\n",
+    "* the RNA sequence: `UUUCG`\n",
+    "* ... has complement: `AAAGC` and\n",
+    "* .. has reverse complement `CGAAA`"
    ]
   },
   {
@@ -352,16 +405,15 @@
    },
    "outputs": [],
    "source": [
-    "# Instruction: your tests of complement and reverse_complement for RNA sequences"
+    "# Instruction: test complement and reverse_complement\n",
+    "# for RNA sequence UUCG "
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Question what happens if you work out the complement of the sequence `UUUTTT` using your function?\n",
-    "\n",
-    "Is this sensible"
+    "**Notice** that by avoiding cut-and-paste we can avoid having to make the same change in two places of code."
    ]
   },
   {
@@ -396,7 +448,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "# Instruction: run this cell to see result of calling log_entry with a single argument\n",
@@ -413,7 +467,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "# Instruction: run this cell to see override of the default\n",
@@ -452,7 +508,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "log_entry(name='Field Mouse')\n",
@@ -499,7 +557,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "test_seq = 'AAAG'\n",
@@ -515,11 +575,30 @@
    "source": [
     "### Optional exercise: deal with RNA sequences properly\n",
     "\n",
-    "Comparing DNA and RNA sequences the DNA base **`T`** is replaced by **`U`** \n",
-    "and so the complement of **`A`** is **`U`** and the complement of **`U`** is **`A`**\n",
+    "> *Have a go at this **if you have time**.*\n",
     "\n",
-    "Lets introduce an argument `rna` that if set true would mean that the output \n",
-    "is an RNA seqiemce with **`U`**'s in place of **`T`**s"
+    "What result does your complement function give for the input\n",
+    "RNA sequence `AAAUUU`?"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "rna2 = 'AAAUUU'\n",
+    "print(rna2, ' complement: ', complement(rna2))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "The complement sequence `TTTAAA` returned is a DNA sequence but is this what is wanted? An RNA sequence (with **`U`**s in place of **`T`s**) might make more sense? We cannot be sure and need to know whether the user wants a DNA or RNA sequence..\n",
+    "\n",
+    "So write a new function `rna_complement` that returns an RNA sequence given an input DNA or RNA sequence. \n",
+    "N.B. do not copy and paste your existing complement function to do this!"
    ]
   },
   {
@@ -530,9 +609,9 @@
    },
    "outputs": [],
    "source": [
-    "# Instruction: produce a new complement function that can\n",
-    "def complement(sequence, reverse=False, rna=False):\n",
-    "    \"\"\"your docstring describing the complement\"\"\"\n",
+    "# Instruction: write rna_complement function \n",
+    "def rna_complement(sequence, reverse=False):\n",
+    "    \"\"\"your docstring describing rna_complement\"\"\"\n",
     "    pass ### replace this line with your code"
    ]
   },
@@ -544,14 +623,39 @@
    },
    "outputs": [],
    "source": [
-    "# Instruction: your tests of RNA handling"
+    "# Instruction: your test rna_complement function by running this cell.\n",
+    "test_rna         = 'AUGC'\n",
+    "given_complement = 'UACG'\n",
+    "given_reverse_c  = 'GCAU'\n",
+    "print('test rna_complement(test_rna): ', end='')\n",
+    "if rna_complement(test_rna) == given_complement:\n",
+    "    print('TEST PASS')\n",
+    "else:\n",
+    "    print('TEST FAIL')\n",
+    "    \n",
+    "print('test rna_complement(test_rna, reverse=True): ', end='')\n",
+    "if rna_complement(test_rna, reverse=True) == given_reverse_c:\n",
+    "    print('TEST PASS')\n",
+    "else:\n",
+    "    print('TEST FAIL')"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Optional exercise: deal with lower case sequence\n",
+    "**Notice** that we can reuse the complement function without copy paste!\n",
+    "\n",
+    "Question: an alternative to having a seperate rna_complement function would\n",
+    "be to extend the `complement` function introducing a new optional argument `rna_result=False`. \n",
+    "Do you think this would be better?"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Optional exercise: deal with lower case letters in sequences\n",
     "\n",
     "Suppose we want to deal with DNA sequences with lower case letters like:\n",
     "```\n",
@@ -572,7 +676,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "# Instruction: test current complement \n",
@@ -605,7 +711,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "# Instruction: run this cell for a demonstration of \n",
@@ -638,7 +746,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "# Instruction: test new complement function.\n",
@@ -657,10 +767,40 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Optional exercise: deal with Ambituity codes\n",
+    "### Optional exercise: deal with Ambiguity codes\n",
+    "\n",
+    "> *Have a go at this **if you have time**.*\n",
+    "\n",
     "* See http://reverse-complement.com/ambiguity.html \n",
-    "* extend your code to deal with ambituity codes\n",
-    "* compare results against http://reverse-complement.com/ and http://arep.med.harvard.edu/labgc/adnan/projects/Utilities/revcomp.html"
+    "* extend your code to deal with ambituity codes in DNA sequences.\n",
+    "* compare results against http://reverse-complement.com/ and http://arep.med.harvard.edu/labgc/adnan/projects/Utilities/revcomp.html\n",
+    "* here is a test"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# test sequence of all lower and upper case letters\n",
+    "import string \n",
+    "letters = string.ascii_letters\n",
+    "# from http://reverse-complement.com/\n",
+    "# reverse complement of:\n",
+    "# abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ\n",
+    "# is:\n",
+    "# ZRXWBAASYQPONKLMJIDCFEHGVTzrxwbaasyqponklmjidcfehgvt\n",
+    "expect = 'ZRXWBAASYQPONKLMJIDCFEHGVTzrxwbaasyqponklmjidcfehgvt'\n",
+    "print('test reverse complement of all ascii letters')\n",
+    "print('input:  ', letters)\n",
+    "print('expect: ', expect)\n",
+    "get = complement(sequence=letters, reverse=True)\n",
+    "print('get:    ', get)\n",
+    "if get == expect:\n",
+    "    print('TEST PASSES')\n",
+    "else:\n",
+    "    print('TEST FAILS')"
    ]
   },
   {
