--- a/ex_D_workbook_model_answers.ipynb
+++ b/ex_D_workbook_model_answers.ipynb
@@ -949,7 +949,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "The complement sequence `TTTAAA` returned is a DNA sequence but is this what is wanted? An RNA sequence (with **`U`**s in place of **`T`s**) would make more sense.\n",
+    "The complement sequence `TTTAAA` returned is a DNA sequence but is this what is wanted? An RNA sequence (with **`U`**s in place of **`T`s**) might make more sense? We cannot be sure and need to know whether the user wants a DNA or RNA sequence..\n",
     "\n",
     "So write a new function `rna_complement` that returns an RNA sequence given an input DNA or RNA sequence. \n",
     "N.B. do not copy and paste your existing complement function to do this!"
@@ -957,7 +957,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -987,7 +987,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [
     {
@@ -1000,7 +1000,7 @@
     }
    ],
    "source": [
-    "# Instruction: your test rna_complement\n",
+    "# Instruction: your test rna_complement function by running this cell.\n",
     "test_rna         = 'AUGC'\n",
     "given_complement = 'UACG'\n",
     "given_reverse_c  = 'GCAU'\n",
@@ -1034,6 +1034,8 @@
    "source": [
     "### Optional exercise: deal with lower case letters in sequences\n",
     "\n",
+    "> *Have a go at this **if you have time**.*\n",
+    "\n",
     "Suppose we want to deal with DNA sequences with lower case letters like:\n",
     "```\n",
     "tata_oligo = 'ctgcTATAAAaggctg'\n",
@@ -1052,7 +1054,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [
     {
@@ -1094,7 +1096,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [
     {
@@ -1127,7 +1129,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 30,
    "metadata": {
     "collapsed": true
    },
@@ -1155,14 +1157,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "foobar\n",
       "tata_oligo =ctgcTATAAAaggctg\n",
       "tata_compl =gacgATATTTtccgac\n",
       "test passes\n"
@@ -1191,7 +1192,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 32,
    "metadata": {
     "collapsed": true
    },
@@ -1233,7 +1234,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [
     {
@@ -1258,7 +1259,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1284,7 +1285,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [
     {
@@ -1305,6 +1306,9 @@
    "metadata": {},
    "source": [
     "### Optional exercise: deal with Ambiguity codes\n",
+    "\n",
+    "> *Have a go at this **if you have time**.*\n",
+    "\n",
     "* See http://reverse-complement.com/ambiguity.html \n",
     "* extend your code to deal with ambituity codes\n",
     "* compare results against http://reverse-complement.com/ and http://arep.med.harvard.edu/labgc/adnan/projects/Utilities/revcomp.html"
@@ -1312,7 +1316,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 70,
+   "execution_count": 36,
    "metadata": {
     "collapsed": true
    },
@@ -1342,7 +1346,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 71,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [
     {
@@ -1360,7 +1364,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 74,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [
     {
