homework D - first draft with MODEL ANSWERS

--- a/ex_D_homework.ipynb
+++ b/ex_D_homework.ipynb
@@ -59,7 +59,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 1,
    "metadata": {
     "collapsed": true
    },
@@ -73,7 +73,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 2,
    "metadata": {
     "collapsed": true
    },
@@ -97,7 +97,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -154,7 +154,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -200,7 +200,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -234,8 +234,13 @@
     "\n",
     "The GC content of DNA is an important property. Although DNA forms double helical structures it is\n",
     "often necessary in both biology and biotechnology to separate the two strands. One way of seperating the strands is to warm up the DNA solution so that the DNA double helix 'melts' into separate strands. \n",
+    "See video: https://www.youtube.com/watch?v=OblPqlOOgew for further background. If the temperature is reduced the\n",
+    "DNA will 'anneal' back to the double stranded form.\n",
     "\n",
-    "See video: https://www.youtube.com/watch?v=OblPqlOOgew for further background.\n",
+    "DNA melting and annealing are crucial for [polymerase chain reaction (PCR)](https://www.nature.com/scitable/definition/polymerase-chain-reaction-pcr-110).\n",
+    "PCR is a widely used molecular biology technique to reproduce (amplify) selected \n",
+    "sections of DNA. Knowing the DNA melting temperature for given DNA sequences is\n",
+    "important for PCR.\n",
     "\n",
     "For short DNA sequences it is possible to predict the DNA melting temperature (the temperature at which 50% of the DNA is double-helical and 50% is in single strands) from its sequence (from http://biotools.nubic.northwestern.edu/OligoCalc.html). For sequences less than 14 bases the:\n",
     "\n",
@@ -259,7 +264,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 6,
    "metadata": {
     "collapsed": true
    },
@@ -274,7 +279,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 7,
    "metadata": {
     "collapsed": true
    },
@@ -309,7 +314,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -381,7 +386,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 9,
    "metadata": {
     "collapsed": true
    },
@@ -392,7 +397,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 10,
    "metadata": {
     "collapsed": true
    },
@@ -412,7 +417,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 11,
    "metadata": {
     "collapsed": true
    },
@@ -424,7 +429,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -463,7 +468,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 13,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "# Advanced programmers only! Avoid code duplication \n",
+    "# in the testing by writing a function  that can test\n",
+    "# both percentage_gc and basic_tm functions against the\n",
+    "# appropriate test data set."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -496,8 +515,7 @@
     }
    ],
    "source": [
-    "# Advanced programs can you avoid code duplication \n",
-    "# in the testing by writing a function \n",
+    "# MODEL ANSWER\n",
     "def test_sequence_fns(test_fn, test_seq_to_data):\n",
     "    \"\"\"\n",
     "    tests function test_fn gives expected data\n",
@@ -529,22 +547,102 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": []
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Dealing with longer sequences\n",
+    "\n",
+    "Returning to the prediction of the DNA melting temperature. The formula:\n",
+    "\n",
+    "$$\n",
+    "T_m = 2(N_A + N_T) + 4(N_G + N_C)\n",
+    "$$\n",
+    "\n",
+    "only applies for sequences that are shorter than 14 nucleotide. \n",
+    "For sequences of 14 nucleotides and longer the OligoCalc Tool\n",
+    "http://biotools.nubic.northwestern.edu/OligoCalc.html \n",
+    "uses the equation:\n",
+    "\n",
+    "$$\n",
+    "T_m= 64.9 +41.\\frac{N_G + N_C - 16.4}{N_A + N_T + N_G + N_C}\n",
+    "$$\n",
+    "\n",
+    "This equation is taken from\n",
+    "Sambrook,J., and Russell,D.W. (2001) Molecular Cloning: A Laboratory Manual. Cold Spring Harbor Laboratory Press; Cold Spring Harbor, NY. [CHSL Press](http://www.molecularcloning.com/)."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "First extend your test set to include sequences of 14 bases and upwards:\n",
+    "\n",
+    "Complete the following table by running the basic tm calculation for \n",
+    "each sequence at http://biotools.nubic.northwestern.edu/OligoCalc.html \n",
+    "\n",
+    "| **test sequence**   | **Basic Tm (degrees C) from OligoCalc** |\n",
+    "| -----------------   | :-------------------------------------: |\n",
+    "| `14*'G'`            |  57.9   |\n",
+    "| `14*'A'`            |  16.9  |   \n",
+    "| *choose a longer sequence* |  ?    |\n",
+    "| *choose a longer sequence* |  ?    |\n",
+    "| *choose a longer sequence* |  ?    |"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
-   "source": []
+   "source": [
+    "# instruction append this test data to your test_data list for basic_tm function"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "# instruction - check that the current implementation of basic_tm fails for the new data"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "# instruction - replace basic_tm with a new implementation that deals with longer sequences"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "# instruction - check the help message for the new implementation of basic_tm"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "# instruction - rerun tests and check that basic_tm works."
+   ]
   }
  ],
  "metadata": {
