--- a/ex_D_homework.ipynb
+++ b/ex_D_homework.ipynb
@@ -531,7 +531,7 @@
     "        calculated = test_fn(seq)\n",
     "        if calculated == expected or \\\n",
     "           (isinstance(expected,float) \n",
-    "            and round(calculated,3) == round(expected,3)) :\n",
+    "            and round(calculated,1) == round(expected,1)) :\n",
     "            print('\\tPASS')\n",
     "        else:\n",
     "            print('\\tFAIL', calculated)\n",
@@ -586,7 +586,12 @@
     "| `14*'A'`            |  16.9  |   \n",
     "| *choose a longer sequence* |  ?    |\n",
     "| *choose a longer sequence* |  ?    |\n",
-    "| *choose a longer sequence* |  ?    |"
+    "| *choose a longer sequence* |  ?    |\n",
+    "\n",
+    "*Note that Oligocalc quotes Basic Tm to one decimal place. It might\n",
+    "have been more appropriate to round to the nearest figure to\n",
+    "show users these are ball-park predictions? In any case you will\n",
+    "need to take this into account in your comparisons*"
    ]
   },
   {
@@ -608,7 +613,9 @@
    },
    "outputs": [],
    "source": [
-    "# instruction - check that the current implementation of basic_tm fails for the new data"
+    "# MODEL ANSWER\n",
+    "test_seq_basic_tm.append((14*'G', 57.9))\n",
+    "test_seq_basic_tm.append((14*'A', 16.9))"
    ]
   },
   {
@@ -619,18 +626,43 @@
    },
    "outputs": [],
    "source": [
-    "# instruction - replace basic_tm with a new implementation that deals with longer sequences"
+    "# instruction check that the current implementation of basic_tm fails for new test data"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 18,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "testing function: basic_tm\n",
+      "\texpect sequence: G gives data: 4.0\n",
+      "\tPASS\n",
+      "\texpect sequence: GG gives data: 8.0\n",
+      "\tPASS\n",
+      "\texpect sequence: A gives data: 2.0\n",
+      "\tPASS\n",
+      "\texpect sequence: GA gives data: 6.0\n",
+      "\tPASS\n",
+      "\texpect sequence: AAAAAAAAAAAAA gives data: 26.0\n",
+      "\tPASS\n",
+      "\texpect sequence: GGGGGGGGGGGGG gives data: 52.0\n",
+      "\tPASS\n",
+      "\texpect sequence: GAGAGAGAGAGAA gives data: 38.0\n",
+      "\tPASS\n",
+      "\texpect sequence: GGGGGGGGGGGGGG gives data: 57.9\n",
+      "\tFAIL 56.0\n",
+      "\texpect sequence: AAAAAAAAAAAAAA gives data: 16.9\n",
+      "\tFAIL 28.0\n"
+     ]
+    }
+   ],
    "source": [
-    "# instruction - check the help message for the new implementation of basic_tm"
+    "# MODEL ANSWER\n",
+    "test_sequence_fns(basic_tm, test_seq_basic_tm)"
    ]
   },
   {
@@ -641,8 +673,215 @@
    },
    "outputs": [],
    "source": [
+    "# instruction - replace basic_tm with a new implementation that deals with longer sequences"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "# MODEL ANSWER\n",
+    "def basic_tm(sequence):\n",
+    "    \"\"\"\n",
+    "    returns the basic Tm melting temperature in degrees C\n",
+    "    for the input DNA sequence.\n",
+    "    \n",
+    "    For less than 14 bases the formula:\n",
+    "    \n",
+    "    Tm=2(NA+NT)+4(NG+NC)\n",
+    "    \n",
+    "    is used where NA is the number of A's, NT is the number of T's\n",
+    "    This formula is from http://biotools.nubic.northwestern.edu/OligoCalc.html \n",
+    "    who cite Marmur,J., and Doty,P. (1962) J Mol Biol 5:109-118 \n",
+    "    https://doi.org/10.1016/S0022-2836(62)80066-7\n",
+    "    \"\"\"\n",
+    "    n_a = sequence.count('A')\n",
+    "    n_t = sequence.count('T')\n",
+    "    n_g = sequence.count('G')\n",
+    "    n_c = sequence.count('C')\n",
+    "    n_total = n_a + n_t + n_g + n_c\n",
+    "    if n_total < 14:\n",
+    "        tm = 2.*(n_a + n_t)\n",
+    "        tm += 4.*(n_g + n_c)\n",
+    "    else:\n",
+    "        tm = 64.9+41.*(n_g+n_c-16.4)/n_total\n",
+    "    return tm "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "# instruction - check the help message for the new implementation of basic_tm"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
     "# instruction - rerun tests and check that basic_tm works."
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "metadata": {
+    "scrolled": true
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "testing function: basic_tm\n",
+      "\texpect sequence: G gives data: 4.0\n",
+      "\tPASS\n",
+      "\texpect sequence: GG gives data: 8.0\n",
+      "\tPASS\n",
+      "\texpect sequence: A gives data: 2.0\n",
+      "\tPASS\n",
+      "\texpect sequence: GA gives data: 6.0\n",
+      "\tPASS\n",
+      "\texpect sequence: AAAAAAAAAAAAA gives data: 26.0\n",
+      "\tPASS\n",
+      "\texpect sequence: GGGGGGGGGGGGG gives data: 52.0\n",
+      "\tPASS\n",
+      "\texpect sequence: GAGAGAGAGAGAA gives data: 38.0\n",
+      "\tPASS\n",
+      "\texpect sequence: GGGGGGGGGGGGGG gives data: 57.9\n",
+      "\tPASS\n",
+      "\texpect sequence: AAAAAAAAAAAAAA gives data: 16.9\n",
+      "\tPASS\n"
+     ]
+    }
+   ],
+   "source": [
+    "# MODEL ANSWER\n",
+    "test_sequence_fns(basic_tm, test_seq_basic_tm)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Optional: Adapting the basic_tm to deal with amigious sequence X\n",
+    "\n",
+    "> Have a go at this if you have time.\n",
+    "\n",
+    "* What happens if you were presented with sequences where there was ambiguity and unknown nucleotides were marked with the code `X` ? \n",
+    "* There are a number of possibilities:\n",
+    "  * We could ignore the `X` completely - but is this sensible?\n",
+    "  * Or we could work out the maximum basic_tm by assuming that all `X` were `G` or `C`\n",
+    "  * Conversely we could find the minimum basic_tm by assuming that all `X` were `A` or `T`\n",
+    "  * Or we could take a 'half-way house' that produces answers averaging the maximum and minimum.\n",
+    "  \n",
+    "Adapt your functions introducing an optional argument:\n",
+    "```\n",
+    "ambiguity='mid'\n",
+    "\n",
+    "# docstring description for ambiguity\n",
+    "\"\"\"\n",
+    "ambiguity controls how X in sequence are treated. \n",
+    "If ambiguity is set to 'max' then X's in sequence are treated \n",
+    "as G/C to give the maximum basic Tm. If set to 'min' then\n",
+    "they are treated as A/T to give the minimum. The default 'mid'\n",
+    "averages the 'max' and 'min' values.\n",
+    "\"\"\"\n",
+    "```"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "# instruction - introduce the ambiguity='mid' into basic_tm"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "# test it (manual will do)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Extend the ambiguity optional argument to have an additional value `'range'` that instead of returning a single basic_tm value returns a tuple of the minimum to maximum values."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "# instruction - introduce the additional value 'range' for ambiguity"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "# test it (manual will do)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Real world prediction of DNA melting temperatures using Python\n",
+    "\n",
+    "* This exercise is designed to get you thinking about using functions\n",
+    "* For real-world prediction of DNA melting temperatures [BioPython](https://biopython.org/)\n",
+    "  includes a MeltingTemp module:\n",
+    "\n",
+    "  http://biopython.org/DIST/docs/api/Bio.SeqUtils.MeltingTemp-module.html \n",
+    "\n",
+    "  that implements a wide range of algorithms for Tm prediction. \n",
+    "  \n",
+    "  An alternative is https://pypi.org/project/melt/\n",
+    "  \n",
+    "Web tools:\n",
+    "* http://biotools.nubic.northwestern.edu/OligoCalc.html\n",
+    "* https://www.ebi.ac.uk/biomodels-static/tools/melting/melt.php"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
