update homework with seminar link

--- a/ex_D_homework.ipynb
+++ b/ex_D_homework.ipynb
@@ -875,13 +875,33 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {
     "collapsed": true
    },
-   "outputs": [],
-   "source": []
+   "source": [
+    "> ### Reminder: saving your work\n",
+    ">\n",
+    "> As you work through the work book it is important to regularly save your work. Notice that as you have made  changes the Jupyter window top line will warn you there are `(unsaved changes)` in small text. To save your work in this notebook by either select menu item `File` `Save` or by hit the save button:\n",
+    "> \n",
+    "> <img src=\"./images/save_button.png\"/>\n",
+    ">\n",
+    "> \n",
+    "> ### Reminder: getting help \n",
+    "> Please see the page:\n",
+    "> [Help with programming](https://canvas.anglia.ac.uk/courses/1490/pages/help-with-programming)\n",
+    "> on ARU Canvas."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Once you have completed this homework, \n",
+    "Please see ARU Canvas page\n",
+    "[Seminar for Exercise D: writing your own functions](https://canvas.anglia.ac.uk/courses/1490/discussion_topics/54475)\n",
+    "for the follow up."
+   ]
   }
  ],
  "metadata": {
