update for practical E

--- a/workbook_E.ipynb
+++ b/workbook_E.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# workbook D: Writing your own functions\n",
+    "# workbook E: Writing your own functions\n",
     "\n",
     "Before starting this exercise you should work through\n",
     "\n",
@@ -28,7 +28,7 @@
     ">\n",
     "> As you work through the work book it is important to regularly save your work. Notice that as you have made  changes the Jupyter window top line will warn you there are `(unsaved changes)` in small text. To save your work in this notebook by either select menu item `File` `Save` or by hit the save button:\n",
     "> \n",
-    "> <img src=\"./images/save_button.png\"/>\n",
+    "> ![Jupyter Notebook Save Button|](https://aru-bioinf-ibds.github.io./images/save_button.png)\n",
     ">\n",
     "> \n",
     "> ### Reminder: getting help \n",
@@ -807,16 +807,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Homework D: Write your own functions\n",
-    "Now go on and complete the [homework D](./ex_D_homework.ipynb)"
+    "## Homework E: Write your own functions\n",
+    "Now go on and complete the **homework_E.ipynb** workbook"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": []
   }
@@ -837,7 +835,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.3"
+   "version": "3.7.1"
   }
  },
  "nbformat": 4,
