update to practical E

--- a/homework_E.ipynb
+++ b/homework_E.ipynb
@@ -4,9 +4,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# homework D: Writing your own functions\n",
+    "# homework E: Writing your own functions\n",
     "\n",
-    "Make sure you have worked through [workbook D](./ex_D_workbook.ipynb) before tackling this homework."
+    "Make sure you have worked through **workbook_E.ipynb** before tackling this homework."
    ]
   },
   {
@@ -17,7 +17,7 @@
     ">\n",
     "> As you work through the work book it is important to regularly save your work. Notice that as you have made  changes the Jupyter window top line will warn you there are `(unsaved changes)` in small text. To save your work in this notebook by either select menu item `File` `Save` or by hit the save button:\n",
     "> \n",
-    "> <img src=\"./images/save_button.png\"/>\n",
+    "> ![Jupyter Notebook Save Button|](https://aru-bioinf-ibds.github.io./images/save_button.png)\n",
     ">\n",
     "> \n",
     "> ### Reminder: getting help \n",
@@ -884,7 +884,7 @@
     ">\n",
     "> As you work through the work book it is important to regularly save your work. Notice that as you have made  changes the Jupyter window top line will warn you there are `(unsaved changes)` in small text. To save your work in this notebook by either select menu item `File` `Save` or by hit the save button:\n",
     "> \n",
-    "> <img src=\"./images/save_button.png\"/>\n",
+    "> ![Jupyter Notebook Save Button|](https://aru-bioinf-ibds.github.io./images/save_button.png)\n",
     ">\n",
     "> \n",
     "> ### Reminder: getting help \n",
@@ -899,9 +899,16 @@
    "source": [
     "## Once you have completed this homework, \n",
     "Please see ARU Canvas page\n",
-    "[Seminar for Exercise D: writing your own functions](https://canvas.anglia.ac.uk/courses/1490/discussion_topics/54475)\n",
+    "[Reflection on Practical E: writing your own functions](https://canvas.anglia.ac.uk/courses/1490/discussion_topics/54475)\n",
     "for the follow up."
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
@@ -920,7 +927,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.3"
+   "version": "3.7.1"
   }
  },
  "nbformat": 4,
